@@ -57,7 +57,7 @@ endif
     ; If AMK is inserted, send the disable/enable SFX echo command
     ; depending on the current sublevel's sfx_echo setting.
     ; Also set a flag in RAM if SFX echo is enabled.
-    lda.l amk_byte : cmp #$5C : bne +
+    lda.l !rom_amk_byte : cmp #$5C : bne +
     ldy #$05
     jsr shared_get_bitwise_mask
     and.l tables_sfx_echo,x : beq ++
@@ -79,7 +79,7 @@ if !reset_boo_rings == 2
 endif
 
     ; Reset timer frame counter
-    lda.l timer_ticks : sta $0F30|!addr
+    lda.l !rom_timer_ticks : sta $0F30|!addr
 
     ; If not entering from the overworld, skip.
     lda $141A|!addr : bne .room_transition
